--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
   <section>
     <h2>All Skibidi Toilet Series Teams</h2>
     <section id="about">
-      <h3>Skibidi Toilet</h3>
+      <h3>🚽 •  Skibidi Toilet</h3>
       <p>Team of Skibidi toilet... No important Information<br>The leaders of the skibidi toilet team is <b>G-Toilet</b>.</p>
     </section>
     <section id="about">
-      <h3>AstroTeam</h3>
+      <h3><img src="AstroLogo.webp" alt="AstroTeam" id="team"> • AstroTeam</h3>
       <p>The AstroTeam is a team made up of two members, the Astro Toilet and the UFO Toilet. The leader of the AstroToilet is <b>Astro Toilet</b>.</p>
     </section>
    <section id="about">
-      <h3>Alliance</h3>
+      <h3><img src="CameraLogo.png" alt="Cameraman" id="team"> | <img src="SpeakerLogo.png" alt="SpeakerMan" id="team"> | <img src="TVLogo.png" alt="TVMan" id="team"> • Alliance</h3>
       <p>The alliance is a team with 3 group, the first group is the Cameraman group, the second is the Speaker group, and the last is the TV Man group. The leader of the alliance is <b>unknown</b>...</p>
     </section>
     <section id="about">
-      <h3>Neutral</h3>
+      <h3><img src="HumanLogo.png" alt"Neutral" id="team"> • Neutral</h3>
       <p>The neutral team is for now unknown, only things we know is the neutral team was owned by the government and the QG is on Alpha Hills Labs. The actual leader is <b>Blugray / Government</b></p>
     </section>
   </section>
@@ -163,7 +163,7 @@
         Epic Blugray and normal blugray
       </p>
 <img src="https://media.discordapp.net/attachments/662665566200528906/1215259220002209812/Screenshot_2024-01-15-18-53-16-163_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=bbabf5cee01cd85e6cb525274ba3234875a5a320b3875e5073fec41fbfa76ff8&" alt="Epic Blugray" id="tie">
-  <<img src="https://media.discordapp.net/attachments/662665566200528906/1215259219754749972/Screenshot_2024-01-15-18-53-30-695_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=dbd789b617e19bf5455626478132bc6f6c1b445cb7a720ccc589e4db1555deba&" alt="Normal Blugray" id="tie"></b>
+  <img src="https://media.discordapp.net/attachments/662665566200528906/1215259219754749972/Screenshot_2024-01-15-18-53-30-695_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=dbd789b617e19bf5455626478132bc6f6c1b445cb7a720ccc589e4db1555deba&" alt="Normal Blugray" id="tie"></b>
     </section>
     </div>
   </section>
@@ -189,4 +189,4 @@ var slideIndex = 0;
   }
 </script>
 
-          </html>
+</html>
