--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <p>Team of Skibidi toilet... No important Information<br>The leaders of the skibidi toilet team is <b>G-Toilet</b>.</p>
     </section>
     <section id="about">
-      <h3><img src="AstroLogo.webp" alt="AstroTeam" id="team"> • AstroTeam</h3>
+      <h3><img src="astrologo.webp" alt="AstroTeam" id="team"> • AstroTeam</h3>
       <p>The AstroTeam is a team made up of two members, the Astro Toilet and the UFO Toilet. The leader of the AstroToilet is <b>Astro Toilet</b>.</p>
     </section>
    <section id="about">
