--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <section>
     <h2>All Skibidi Toilet Series Teams</h2>
     <section id="about">
-      <h3>🚽 •  Skibidi Toilet</h3>
+      <h3><img src="ToiletLogo.png" alt="Toilet Team" id="team">•  Skibidi Toilet</h3>
       <p>Team of Skibidi toilet... No important Information<br>The leaders of the skibidi toilet team is <b>G-Toilet</b>.</p>
     </section>
     <section id="about">
