--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
   </div>
 
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214902579281002566/skibidi_toilet_72_troll_leaks.gif?ex=65facd32&is=65e85832&hm=7e105f3319b89929f872907246e4bff4668cd0983064cdbabec6047b2e330e35&" alt="72">
+    <img src="https://i.imgur.com/AhTSYuR.jpeg" alt="This is big shit for someone...">
     <div class="prose">
-      <p>Coming soon...</p>
+      <p>- .... .. ... / .. ... / -... .. --. / ... .... .. - / ..-. --- .-. / ... --- -- . --- -. .</p>
       <h2>Skibidi Toilet 72</h2>
-      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">Coming soon... • Access to information </a>
+      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">Arrives in less than 48 hours</a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
@@ -112,7 +112,7 @@
   <section>
     <h2>All Skibidi Toilet Series Teams</h2>
     <section id="about">
-      <h3><img src="ToiletLogo.png" alt="Toilet Team" id="team">•  Skibidi Toilet</h3>
+      <h3><img src="ToiletLogo.png" alt="Toilet Team" id="team"> •  Skibidi Toilet</h3>
       <p>Team of Skibidi toilet... No important Information<br>The leaders of the skibidi toilet team is <b>G-Toilet</b>.</p>
     </section>
     <section id="about">
@@ -124,7 +124,7 @@
       <p>The alliance is a team with 3 group, the first group is the Cameraman group, the second is the Speaker group, and the last is the TV Man group. The leader of the alliance is <b>unknown</b>...</p>
     </section>
     <section id="about">
-      <h3><img src="HumanLogo.png" alt"Neutral" id="team"> • Neutral</h3>
+      <h3><img src="HumanLogo.png" alt"Neutral (formerly HumanTeam)" id="team"> • Neutral</h3>
       <p>The neutral team is for now unknown, only things we know is the neutral team was owned by the government and the QG is on Alpha Hills Labs. The actual leader is <b>Blugray / Government</b></p>
     </section>
   </section>
