--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214907074123792454/Screenshot_2024-03-05-18-35-06-339_com.picsart.studio-edit.jpg?ex=65fad162&is=65e85c62&hm=1df1373d990c049c44bc5be7e69343324f5667d0fae9246cae6c928bcd1cc22e&" alt="You weren't supposed to die">
+    <img src="https://cdn.discordapp.com/attachments/1076988047998074931/1216730638888210432/Camerabanner_2.0.png?ex=660173b6&is=65eefeb6&hm=de96e9a3b86c801492b58a45737a31d38778516e1fa6c310893b8de3ce39df8f&" alt="All Skibidi Toilet OST">
     <div class="prose">
       <p>Out now!</p>
-      <h2>You weren't supposed to die...</h2>
-      <a href="https://youtu.be/AkmIyykLVAU">Watch now!</a>
+      <h2>All Skibidi Toilet OST</h2>
+      <a href="https://youtu.be/Byo5Jhf5xFc">Watch now!</a>
       <p>● ○ ○ ○</p>
     </div>
   </div>
@@ -53,9 +53,9 @@
   <div class="slide">
     <img src="https://i.imgur.com/AhTSYuR.jpeg" alt="This is big shit for someone...">
     <div class="prose">
-      <p>- .... .. ... / .. ... / -... .. --. / ... .... .. - / ..-. --- .-. / ... --- -- . --- -. .</p>
+      <p>The countdown alarm sounds!</p>
       <h2>Skibidi Toilet 72</h2>
-      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">Arrives in less than 48 hours</a>
+      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">Arrives in less than 24 hours</a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
@@ -107,7 +107,7 @@
       <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe><br>
         <h4>Goal -> 900 and 1000</h4><br><br>
         <h2>last video</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/AkmIyykLVAU?si=x7u81Qg7QH1fd8pw&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen alt="BlugrayGuy"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Byo5Jhf5xFc?si=ixbzUjjUH1_RUoxT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </section>
   <section>
     <h2>All Skibidi Toilet Series Teams</h2>
