--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://cdn.discordapp.com/attachments/1076988047998074931/1216730638888210432/Camerabanner_2.0.png?ex=660173b6&is=65eefeb6&hm=de96e9a3b86c801492b58a45737a31d38778516e1fa6c310893b8de3ce39df8f&" alt="All Skibidi Toilet OST">
+    <img src="https://i.imgur.com/KCfh4Tv.png" alt="Crazy Gray Servitor">
     <div class="prose">
-      <p>Out now!</p>
-      <h2>All Skibidi Toilet OST</h2>
-      <a href="https://youtu.be/Byo5Jhf5xFc">Watch now!</a>
+      <p>Convince them</p>
+      <h2>Stick to the plan Gray Servitor</h2>
       <p>● ○ ○ ○</p>
     </div>
   </div>
@@ -53,9 +52,9 @@
   <div class="slide">
     <img src="https://i.imgur.com/AhTSYuR.jpeg" alt="This is big shit for someone...">
     <div class="prose">
-      <p>The countdown alarm sounds!</p>
+      <p>Tik tok fucking clock</p>
       <h2>Skibidi Toilet 72</h2>
-      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">Arrives in less than 24 hours</a>
+      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">few hours left</a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
@@ -71,11 +70,10 @@
       </div>
 
       <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631601024274472/Picsart_24-03-05_18-50-30-951.jpg?ex=65f9d0d4&is=65e75bd4&hm=c7dc945ef4154611e518e04661c98e239504220afec8b52fdc8908238ce29c41&" alt="Season 23">
+    <img src="https://i.imgur.com/9dFQXTz.png" alt="Skibidi Toilet 72 leak">
     <div class="prose">
-      <p>Out now!</p>
-      <h2>skibidi toilet - season 23 (all episodes)</h2>
-      <a href="https://youtu.be/vIOqFFXPh10">Watch now!</a>
+      <p>New leak!</p>
+      <h2>You just have to convince them to follow you...</h2>
       <p>○ ○ ○ ●</p>
     </div>
 
