--- a/72.html
+++ b/72.html
@@ -17,19 +17,19 @@
 <section>
   <section id="uptitle">
 <h1>Skibidi toilet 72</h1>
-<p>coming after: 03/09/24</p>
+<p>DaFuq!?Boom!: Is coming in few times stay tuned y'all!</p>
   </section>
 <br>
 <section>
 <h4>Information about:</h4>
 <p>
   > Type of episodes: short<br>
-  > Environment: unknown yet<br>
+  > Environment: new<br>
   > duration: ~1/2 minutes <br>
   > publications: premiere<br>
   > shorts version: true<br>
   > new character: maybe<br>
-  > more information coming soon...
+  > content a battle: yes
 </p>
 </section>
 <br>
@@ -43,4 +43,3 @@
 </section>
 </section>
 </body>
-
