--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
   <div class="slide">
     <img src="https://i.imgur.com/KCfh4Tv.png" alt="Crazy Gray Servitor">
     <div class="prose">
-      <p>Convince them</p>
-      <h2>Stick to the plan Gray Servitor</h2>
+      <h2>Stick to the plan...</h2>
       <p>● ○ ○ ○</p>
     </div>
   </div>
@@ -52,9 +51,9 @@
   <div class="slide">
     <img src="https://i.imgur.com/AhTSYuR.jpeg" alt="This is big shit for someone...">
     <div class="prose">
-      <p>Tik tok fucking clock</p>
+      <p>deleyed to this weekend</p>
       <h2>Skibidi Toilet 72</h2>
-      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">few hours left</a>
+      <a href="72.html">View information</a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
@@ -70,10 +69,11 @@
       </div>
 
       <div class="slide">
-    <img src="https://i.imgur.com/9dFQXTz.png" alt="Skibidi Toilet 72 leak">
+    <img src="https://i.imgur.com/OLqqzwy.jpeg" alt="Skibidi Toilet 72 leak">
     <div class="prose">
-      <p>New leak!</p>
-      <h2>You just have to convince them to follow you...</h2>
+      <p>Recent video!</p>
+      <h2>Blugray OST (Remaster)</h2>
+      <a href="https://youtu.be/HDEgJci7Rs8?si=VdJpryGHerZQ1Skm">Watch Now!</a>
       <p>○ ○ ○ ●</p>
     </div>
 
@@ -165,6 +165,7 @@
     </section>
     </div>
   </section>
+
   </main>
   <div class="floating-video">
   <iframe width="300" height="200" src="https://www.youtube.com/embed/vIOqFFXPh10?autoplay=0" frameborder="0" allowfullscreen></iframe>
