--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
       <h3><img src="HumanLogo.png" alt"Neutral (formerly HumanTeam)" id="team"> • Neutral</h3>
       <p>The neutral team is for now unknown, only things we know is the neutral team was owned by the government and the QG is on Alpha Hills Labs. The actual leader is <b>Blugray / Government</b></p>
     </section>
+    <section id="about">
+      <h3>[?] • NakedKitchen Team</h3>
+      <p>Made up of Naked Kitchenmen, this new group will appear in future episodes to come.<br>
+      Actually we don't have <b>no information</b> about this team...</p>
+    </section>
   </section>
   <section>
     <div class="tie">
