--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <section id="about">
       <h3>[?] • NakedKitchen Team</h3>
       <p>Made up of Naked Kitchenmen, this new group will appear in future episodes to come.<br>
-      Actually we don't have <b>no information</b> about this team...</p>
+      Actually we don't have <b>no information</b> about this team, expect that come on some troll skibidi toilet episodes...</p>
     </section>
   </section>
   <section>
