--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <div class="slide">
     <img src="https://i.imgur.com/AhTSYuR.jpeg" alt="This is big shit for someone...">
     <div class="prose">
-      <p>deleyed to this weekend</p>
+      <p>IT'S NOW!</p>
       <h2>Skibidi Toilet 72</h2>
-      <a href="72.html">View information</a>
+      <a href="72.html">In less than 48 hours!</a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
