--- a/dtst.html
+++ b/dtst.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<<header>
+<header>
     <a href="index.html"><img src="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&""" alt="BlugrayGuy.com"></a>
     <nav>
       <ul>
