--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
   </div>
 
   <div class="slide">
-    <img src="https://i.imgur.com/AhTSYuR.jpeg" alt="This is big shit for someone...">
+    <img src="https://media.discordapp.net/attachments/1076988047998074931/1218873465021403136/Picsart_24-03-17_11-47-16-018.png?ex=66093f5f&is=65f6ca5f&hm=3887b6e0457682d89040e205d462dc3506d251c9cd741851b947c058d64d3bdd&" alt="72 All leak">
     <div class="prose">
-      <p>IT'S NOW!</p>
+      <p>Today</p>
       <h2>Skibidi Toilet 72</h2>
-      <a href="72.html">In less than 48 hours!</a>
+      <a href="72.html">In less than 5 hours!</a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
@@ -193,4 +193,4 @@ var slideIndex = 0;
   }
 </script>
 
-</html>
+      </html>
