--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="prose">
       <p>Today</p>
       <h2>Skibidi Toilet 72</h2>
-      <a href="72.html">In less than 5 hours!</a>
+      <a href="72.html">View info!</a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
@@ -193,4 +193,4 @@ var slideIndex = 0;
   }
 </script>
 
-      </html>
+</html>
