--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="slide">
     <img src="https://media.discordapp.net/attachments/1076988047998074931/1218873465021403136/Picsart_24-03-17_11-47-16-018.png?ex=66093f5f&is=65f6ca5f&hm=3887b6e0457682d89040e205d462dc3506d251c9cd741851b947c058d64d3bdd&" alt="72 All leak">
     <div class="prose">
-      <p>Today</p>
+      <p>new leak from today</p>
       <h2>Skibidi Toilet 72</h2>
       <a href="72.html">View info!</a>
       <p>○ ● ○ ○</p>
