--- a/index.html
+++ b/index.html
@@ -171,6 +171,22 @@
     </div>
   </section>
 
+ <section>
+      <h2>Website's credits</h2>
+      <p>Credits of all developers and contributors</p>
+      <section>
+        <h3>Developers</h3>
+        <section>
+          <h4> - BlugrayGuy</h4><p><a href="https://youtube.com/@BlugrayGuy?sub_confirmation=1">Subscribe here!</a></p><br><br>
+          <h4> - MirossOffYT</h4><p><a href="https://youtube.com/@MirossOffYT?sub_confirmation=1">Subscribe here!</a></p>
+        </section>
+        <h3>Contributors</h3>
+        <section>
+          <h4> - DaFuq!?Boom!</h4><p><a href="https://youtube.com/@DaFuqBoom?sub_confirmation=1">Subscribe here!</a></p>
+        </section>
+      </section>
+    </section>
+
   </main>
   <div class="floating-video">
   <iframe width="300" height="200" src="https://www.youtube.com/embed/vIOqFFXPh10?autoplay=0" frameborder="0" allowfullscreen></iframe>
