--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://i.imgur.com/KCfh4Tv.png" alt="Crazy Gray Servitor">
+    <img src="https://media.discordapp.net/attachments/1076988047998074931/1219271166506569850/gifstuff4-ezgif.com-video-to-gif-converter.gif?ex=660ab1c3&is=65f83cc3&hm=0a1a66362733e25fbbb44d1e907f0af3b9033981d54525224004269f57a24103&" alt="Number one threats">
     <div class="prose">
-      <h2>Stick to the plan...</h2>
+      <h2>Biggest threats</h2>
       <p>● ○ ○ ○</p>
     </div>
   </div>
@@ -69,7 +69,7 @@
       </div>
 
       <div class="slide">
-    <img src="https://i.imgur.com/OLqqzwy.jpeg" alt="Skibidi Toilet 72 leak">
+    <img src="https://media.discordapp.net/attachments/1076988047998074931/1219271167790026823/Picsart_24-03-13_15-30-00-202.png?ex=660ab1c3&is=65f83cc3&hm=8ac194bec3c9902249727f5d4b236dc3fa49ec963f961cd9e140d2a524234953&" alt="Blugray_29.idk">
     <div class="prose">
       <p>Recent video!</p>
       <h2>Blugray OST (Remaster)</h2>
