--- a/storyline.html
+++ b/storyline.html
@@ -41,10 +41,43 @@ We also discover <b>women</b> for the first time with the first, <b>Girl</b> <b>
 We also discover the <b>Titans</b>, the first was discovered at the beginning of the series it is "<b>Titan</b> <b>Cameraman</b>" but later we also discover <b>Titan</b> <b>SpeakerMan</b> and then from <b>episode</b> 41 we discover the <b>Titan</b> <b>TVMan</b> then after a few <b>episodes</b> became <b>Titan</b> <b>Cineman</b> and after being destroyed by the <b>Titan</b> <b>SpeakerMan</b> who was infected by a <b>Toilet</b> <b>parasite</b> created by the <b>Scientist</b> <b>Toilet</b> a long time ago...<br>
 It wasn't long after the <b>Cineman's</b> defeat that the <b>cameramen</b> returned their <b>Titan</b> <b>Cameraman</b>, which was upgraded after taking <b>damage</b> from the <b>Gman</b>.<br><br>
 - <b>Episode</b> 51 to 69<br><br>
+The <b>speakerman</b> being parasitized by the <b>scientist</b> continues to wreak havoc but not for long because the <b>cameraman</b> comes to fight him and destroys the parasite in <b>episode</b> 57...<br><br>
+Then in <b>episode</b> 60 we make the terrifying discovery of the immense <b>scientist's</b> mecha...<br><br>
+Then in the next <b>episode</b> we discover a <b>Skibidi</b> <b>Toilet</b> Mutant and the <b>Skibidi</b> <b>Toilet</b> Buzzsaw.<br><br>
+
+In <b>episode</b> 65 the <b>Titan</b> went to fight the <b>gman</b> and his troop but his troop leaves and leaves the <b>gman</b> alone and a fight begins, the <b>Titan</b> wins but discovers that it was all a trap, the <b>gman</b> was a fake and several <b>skibidi</b> kamikaze arrive and destroy the <b>cameraman</b> <b>titan</b>.<br>
+In <b>episode</b> 66 the <b>alliance</b> was made aware of this and it is called "Cameraman Rage" and destroys all the <b>Skibidi</b> <b>Toilets</b> in anger...<br><br>
+
+In <b>episode</b> 67 the <b>cameramen</b> return to the scene of the chaos in front of the <b>Skibidi</b> <b>Toilet</b> bunker, formerly the Alpha Hills government bunker.<br>
+In this <b>episode</b> we find the <b>skibidi</b> <b>Toilet</b> mafia not seen since season 3 or 4.<br>
+Subsequently we find the <b>Titan</b> <b>TV</b> <b>Man</b> which is brand new because it had been destroyed earlier...<br>
+he wreaks carnage with his power and destroys any <b>skibidi</b> <b>Toilet</b> that puts him in his passages.<br><br>
+
+In <b>episode</b> 68 and 69 the <b>alliance</b> enters the Alpha Hills bunkers and goes in search of the <b>scientist</b>, they will discover zombie <b>Toilet</b> and Micheal Jackson <b>Toilet</b> and Walter White and Jessie <b>Toilet</b>...<br><br>
+
+- <b>Episode</b> 70 to 71<br><br>
+
+Being in <b>Plungerman</b>'s POV we see what he sees, and discover that <b>Blugray</b> a.k.a. Secret Agent is in fact the administrator (head) of the government.<br>
+Let's go back 2 years earlier, a video having been published in 2021 then deleted named <b>Blugray</b> - Demand or the <b>cameraman</b> and <b>TVMan</b> and was created by the Russian government, everything is linked but by two different universes...<br>
+So we will see this a little later and see that it all makes sense...<br>
+back to <b>episode</b> 70, we find out that <b>Lucky</b> <b>Cameraman</b> (<b>Gray</b> <b>Servitor</b> / <b>Simp</b> <b>Cameraman</b>) had something to do with all this, he has an unknown/unidentified device...<br><br>
+
+Shortly after we enter the room with the <b>scientist</b>, a fight begins, and the <b>alliance</b> wins but unfortunately we lost the two best fighters, <b>Plungerman</b> and <b>Black</b> <b>SpeakerMan</b>...<br>
+Strangely the <b>plungerman</b> sees the ghosts of his allies, then is teleported into a room with <b>Blugray</b>, a discussion starts where it is said "The <b>scientist</b> is done but a greater threat is coming and that is why the <b>PlungerMan's</b> pov must remain secret, there is no more proof, the <b>blugray</b> has erased everything but one thing remains: the <b>PlungerMan</b>, he has seen too much and disconnects him.<br><br>
+
+History/theory:<br>
+<b>Blugray</b> has become the head of the government and the <b>alliance</b> created by the government, <b>Blugray</b> can therefore control the <b>alliance</b> from a distance but prefers to remain Secret to avoid any problems...<br>
+We still don't know where the <b>toilet</b> comes from, but we know where the wedding ring comes from.<br><br>
+
+Let's go to <b>episode</b> 71, we discover in this one why the <b>titan</b> <b>tv</b> <b>man</b> has a broken <b>TV</b> [see Summary page],<br>
+subsequently we discover that we are in reality on a gigantic silo of the bunker which actually contains the <b>Gman</b>, then he comes out devastates everything and flees...<br><br>
+
+- <b>Episode</b> 72<br><br>
+
 Soon...</p>
   </section>
 </main>
 
 </body>
 
-</html>
+</html> 
