--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
 
     </div>
 </section>
+<section>
+  <h2>Skibidi Toilet Storylines</h2>
+  <p>Access <a href="storyline.html">now here </a>to the storyline!</p>
+</section>
     <section>
       <h2>Document [72]</h2>
       <p>Coming soon after March 09, 2024.</p>
