--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="font" content="Shadded South, fantasy">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BlugrayGuy.com</title>
@@ -26,7 +27,7 @@
 
 <body>
   <header>
-    <a href="index.html"><img src="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&""" alt="BlugrayGuy.com"></a>
+    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community</h1><h5>By blugrayGuy</h5><br></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
@@ -49,21 +50,21 @@
   </div>
 
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1076988047998074931/1218873465021403136/Picsart_24-03-17_11-47-16-018.png?ex=66093f5f&is=65f6ca5f&hm=3887b6e0457682d89040e205d462dc3506d251c9cd741851b947c058d64d3bdd&" alt="72 All leak">
+    <img src="https://media.discordapp.net/attachments/1076988047998074931/1220402199255978064/Picsart_24-03-21_17-02-27-494.jpg?ex=660ecf1e&is=65fc5a1e&hm=0385a51a35be4109a4e08d11fb6d0c769dcadc8236d7dae75171fc5afda1b07d&" alt="72 part 2">
     <div class="prose">
-      <p>new leak from today</p>
-      <h2>Skibidi Toilet 72</h2>
+      <p>Coming soon...</p>
+      <h2>Skibidi Toilet 72 (Part 2)</h2>
       <a href="72.html">View info!</a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214956091117543515/Picsart_24-03-06_16-19-44-975.png?ex=65faff08&is=65e88a08&hm=e0e44f5290e86691b85e6f6a280ece2ed576e1d102c12465d2477e26a95cce5e&" alt="71">
+    <img src="https://media.discordapp.net/attachments/1076988047998074931/1220402199809490996/Picsart_24-03-21_17-02-13-506.png?ex=660ecf1e&is=65fc5a1e&hm=c796159893e57f8b4be8e57bf7ff375b77d5803072a7895589f97f9024f8890e&" alt="72 part 1">
     <div class="prose">
       <p>Out now!</p>
-      <h2>Skibidi Toilet 71</h2>
-      <a href="https://youtu.be/aFvw_yu0N3A?list=TLGGU0Ng1a1kngEwNTAzMjAyNA">Watch now!</a>
+      <h2>Skibidi Toilet 72</h2>
+      <a href="https://youtu.be/o_1YiaJSnjo">Watch now!</a>
       <p>○ ○ ● ○</p>
     </div>
       </div>
@@ -87,8 +88,8 @@
   <p>Access <a href="storyline.html">now here </a>to the storyline!</p>
 </section>
     <section>
-      <h2>Document [72]</h2>
-      <p>Coming soon after March 09, 2024.</p>
+      <h2>Document [72-2]</h2>
+      <p>Coming soon after March 24, 2024.</p>
       <p>More information <a href="72.html">here!</a></p>
     </section>
       <section>
@@ -135,45 +136,6 @@
       Actually we don't have <b>no information</b> about this team, expect that come on some troll skibidi toilet episodes...</p>
     </section>
   </section>
-  <section>
-    <div class="tie">
-      <h1>
-        All tie of blugray all of all universe... (and bonus)
-      </h1>
-      <section>
-        <h2>
-          Gray and black tie (skibidi toilet)
-        </h2>
-    <img src="https://media.discordapp.net/attachments/662665566200528906/1215259217737424936/Screenshot_2024-02-18-01-19-26-893_dev.beefers.vendetta-edit.jpg?ex=65fc1957&is=65e9a457&hm=aeea551e4f4080e00062617da9624acb3f37cf384016e4ec8e247b9692c08d1a&" alt="Gray and black tie 1" id="tie">
-    <img src="https://media.discordapp.net/attachments/662665566200528906/1215259218039410728/IMG_20240211_134420_101.jpg?ex=65fc1958&is=65e9a458&hm=cf9cf435aaaef62fa22cb95e1f869c284faa7046f438184e87d7e80532763691&" alt="gray and black 2" id="tie">
-    </section>
-    <section>
-      <p><b>
-        Dark Tie
-      </p>
-      <img src="https://media.discordapp.net/attachments/662665566200528906/1215259218383216651/Blugray_-_Demand_1.png?ex=65fc1958&is=65e9a458&hm=4e32de849a7714904ddd03db1011cfcffc52b7fb412d8bc8f512daf2e3da226b&" alt="Dark Tie" id="tie">
-      <p>
-        Red tie
-      </p>
-<img src="https://media.discordapp.net/attachments/662665566200528906/1215259218752577566/Screenshot_2024-01-15-18-54-31-393_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=e4000510458a877e0b629cd5d68b94c566f18e9478b2f11ffa79fcbe77a5e5cc&" alt="Red tie" id="tie">
-<p>
-  Yellow tie
-</p>
-<img src="https://media.discordapp.net/attachments/662665566200528906/1215259219155226634/Screenshot_2024-01-15-18-54-13-563_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=cdc8fc2493390555a83a6fa16dcc1d4c11d850f4c15a41687a70ca9a263dc655&" alt="Yellow tie" id="tie">
-<p>
-  Gray tie
-</p>
-<img src="https://media.discordapp.net/attachments/662665566200528906/1215259219469664266/Screenshot_2024-01-15-18-53-48-621_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=4c0b309485e89dbea9cef469d1311fb9163c955cec21a291226161b4d4df53cd&" alt="Gray Tie" id="tie">
-    </section>
-    <section>
-      <p>
-        Epic Blugray and normal blugray
-      </p>
-<img src="https://media.discordapp.net/attachments/662665566200528906/1215259220002209812/Screenshot_2024-01-15-18-53-16-163_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=bbabf5cee01cd85e6cb525274ba3234875a5a320b3875e5073fec41fbfa76ff8&" alt="Epic Blugray" id="tie">
-  <img src="https://media.discordapp.net/attachments/662665566200528906/1215259219754749972/Screenshot_2024-01-15-18-53-30-695_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=dbd789b617e19bf5455626478132bc6f6c1b445cb7a720ccc589e4db1555deba&" alt="Normal Blugray" id="tie"></b>
-    </section>
-    </div>
-  </section>
 
  <section>
       <h2>Website's credits</h2>
@@ -211,6 +173,16 @@ var slideIndex = 0;
     slides[slideIndex-1].style.display = "block";
     setTimeout(showSlides, 5000);
   }
+  
+if ("Notification" in window) {
+  Notification.requestPermission().then(function(permission) {
+    if (permission === "granted") {
+      var notification = new Notification("Update warning ⚠️", {
+        body: "Due to bug issues, some things have been removed"
+      });
+    }
+  });
+}
 </script>
 
 </html>
