--- a/summary.html
+++ b/summary.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <a href="index.html"><img src="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&""" alt="BlugrayGuy.com"></a>
+    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community</h1><h5>By blugrayGuy</h5><br></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
@@ -35,7 +35,7 @@
      Summary of Skibidi Toilet 72
    </h1>
    <p>
-     <li> <b>Coming soon...</b>
+     <li> <b>part 1 summary coming soon...</b>
    </p>
  </section>
 </body>
