--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
   </main>
   <div class="floating-video">
-  <iframe width="300" height="200" src="https://www.youtube.com/embed/vIOqFFXPh10?autoplay=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="360" height="215" src="https://www.youtube.com/embed/o_1YiaJSnjo?si=ZyhoAjYHNieUAs_n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </body>
 <script>
