--- a/index.html
+++ b/index.html
@@ -200,10 +200,7 @@ var slideIndex = 0;
     slides[slideIndex-1].style.display = "block";
     setTimeout(showSlides, 5000);
   }
-  
-  function warndel() {
-    alert('⚠️ Warning:\nThe section with all of ties was deleted and the logo of the website with due to some image bug.')
-  }
 </script>
+<script src="ex-sraw.js"></script>
 
 </html>
