--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </header>
   <section>
 <div class="search-container">
-  <input type="text" id="searchInput" placeholder="Searcj...">
+  <input type="text" id="searchInput" placeholder="Search for a page...">
   <button onclick="search()">Search 🔎</button>
 </div>
 
