--- a/wiki/Blugray.html
+++ b/wiki/Blugray.html
@@ -1,3 +1,6 @@
+Blugray—
+
+
 Blugray is a musical, mysterious and the administrator of the Aplha Hills Laboratory formerly owned by the Government.
 Blugray has many emotions and ties and this wiki contains all of them.
   Red Tie:
