--- a/wiki/Blugray.html
+++ b/wiki/Blugray.html
@@ -54,6 +54,9 @@ Yaint shit explains how much blugray suffers while animation for hours nonstop a
 The computer in yaint shit is represented as the fan.
 Blugray gets no rest and at the end he has to throw away all his loved ones.
 
+Farewell Mr.P:
+This song is all about Mr P blugray wants to kill/assasinate mr p for the good of the country and basically roasts him.
+
 Bonus:
 As said earlier in other music videos there are 2 instrumental music which has no original versions because they don't exist.
 One is sadness an sad song.
