--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <div class="right"><a href="https://github.com/BlugrayGuyLegit/Skibidi-toilet-community/tree/main"><button>View on GitHub</button></a><a href="https://github.com/Discode-Studio"><button>View Keams OS Team</button></a><a href="https://github.com/BlugrayGuyLegit/Blugray/new/main/wiki"><button>Create a wiki page for free!</button></a><button onclick="connectWithDiscord()">Log in with Discord</button></div>
   <meta property="title" content="Skibidi Toilet Community by blugrayGuy">
     <meta property="description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
-    <meta property="icon" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&" alt="home">
+    <link rel="shortcut icon" href="/icon/channels4_profile.jpg">
     <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&">
-    <link rel="shortcut icon" type="image/png" href="https://media.discordapp.net/attachments/662665566200528906/1215021749352005662/Picsart_24-03-06_20-32-28-353.png?ex=65fb3c2f&is=65e8c72f&hm=75577cf9e5783dd6366d974f5b604c05953d964a59616c203a54eca275b9141d&">
     <link rel="apple-touch-icon" href="https://media.discordapp.net/attachments/662665566200528906/1215021749352005662/Picsart_24-03-06_20-32-28-353.png?ex=65fb3c2f&is=65e8c72f&hm=75577cf9e5783dd6366d974f5b604c05953d964a59616c203a54eca275b9141d&">
     <meta name="theme-color" content="#0000FF">
     <meta property="og:type" content="website">
@@ -62,7 +61,7 @@
   <section>
 <div class="search-container">
   <input type="text" id="searchInput" placeholder="Search for a page...">
-  <button onclick="search()">Search 🔎</button>
+    <button onclick="search()">Search 🔎</button>
 </div>
 
 <div id="searchResults" style="display: none;">
@@ -81,9 +80,10 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1076988047998074931/1219271166506569850/gifstuff4-ezgif.com-video-to-gif-converter.gif?ex=660ab1c3&is=65f83cc3&hm=0a1a66362733e25fbbb44d1e907f0af3b9033981d54525224004269f57a24103&" alt="Number one threats">
+    <img src="https://media.discordapp.net/attachments/1076988047998074931/1222978989178753124/Picsart_24-03-28_19-41-38-025.jpg?ex=66182ef0&is=6605b9f0&hm=9bacb64d69dd48da3a6d854d92c8d209d8054c81132cc5e4a836f87a35b122ca&" alt="Skibidi Toilet 72 part 2 beta leak">
     <div class="prose">
-      <h2>Biggest threats</h2>
+      <p>New leak from Instagram !</p>
+      <h2>This is big shit for someone...</h2>
       <p>● ○ ○ ○</p>
     </div>
   </div>
