--- a/Blugray-console.html
+++ b/Blugray-console.html
@@ -13,6 +13,16 @@
   </style>
 </head>
 <body>
+  <pre>
+ ________  ___       ___  ___  ________  ________  ________      ___    ___ 
+|\   __  \|\  \     |\  \|\  \|\   ____\|\   __  \|\   __  \    |\  \  /  /|
+\ \  \|\ /\ \  \    \ \  \\\  \ \  \___|\ \  \|\  \ \  \|\  \   \ \  \/  / /
+ \ \   __  \ \  \    \ \  \\\  \ \  \  __\ \   _  _\ \   __  \   \ \    / / 
+  \ \  \|\  \ \  \____\ \  \\\  \ \  \|\  \ \  \\  \\ \  \ \  \   \/  /  /  
+   \ \_______\ \_______\ \_______\ \_______\ \__\\ _\\ \__\ \__\__/  / /    
+    \|_______|\|_______|\|_______|\|_______|\|__|\|__|\|__|\|__|\___/ /     
+                                                               \|___|/      
+  </pre>
 > Blugray Console<br>> V74.0<br><br>
   > Intraverse connection... <br>
   > Connection detected <br>
