--- a/72.html
+++ b/72.html
@@ -17,29 +17,29 @@
 <section>
   <section id="uptitle">
 <h1>Skibidi toilet 72</h1>
-<p>DaFuq!?Boom!: Is coming in few times stay tuned y'all!</p>
+<p>DaFuq!?Boom!: No one is ready for this battle !</p>
   </section>
 <br>
 <section>
 <h4>Information about:</h4>
 <p>
-  > Type of episodes: short<br>
-  > Environment: new<br>
-  > duration: ~1/2 minutes <br>
+  > Type of episodes: long<br>
+  > Environment: City<br>
+  > duration: ~3/4 minutes <br>
   > publications: premiere<br>
   > shorts version: true<br>
-  > new character: maybe<br>
-  > content a battle: yes
+  > new character: a lot<br>
+  > content a battle: yes (Astro vs G-Toilet vs Titan semi final battle)
 </p>
 </section>
 <br>
 <section id="about">
   <h1>Information about the episode</h1>
     <p>
-      <li>While the <b>Titans</b> are on the hunt of the <b>Gman</b> who is also being pursued by the <b>Astro Toilet</b>, the <b>alliance</b> is preparing for <i>something...</i></li>
-<li><b>Gray Servitor</b> known as <b>Lucky Cameraman</b> must convince the <b>alliance</b> to follow his still unknown plan.</li>
-<li>A <b>new character</b> will <i>appear but who will they be?</i> You will find out in <b>episode 72...</b></li>
-<li>However <b>Blugray</b> know as the <i>Secret Agent</i> observes the work of his <b>servant (Lucky Cameraman)</b> doing what he must do.</li>
+      The <b>semi-final</b> has started, the <b>Astro and the G-TOILET</b> will face each other but the <b>Titans</b> will interrupt and fight them too.<br>
+      <b>Someone very powerful</b> is in this part,
+      <i>no one is ready</i>...
+    </p>
 </section>
 </section>
 </body>
