--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </section>
     <section>
       <h2>Document [72-2]</h2>
-      <p>Coming soon after March 24, 2024.</p>
+      <p>Coming 1 April 2024.</p>
       <p>More information <a href="72.html">here!</a></p>
     </section>
       <section>
@@ -194,7 +194,7 @@
 
   </main>
   <div class="floating-video">
-<iframe width="360" height="215" src="https://www.youtube.com/embed/o_1YiaJSnjo?si=ZyhoAjYHNieUAs_n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="360" height="205" src="https://www.youtube-nocookie.com/embed/m7sp-FTeZWE?si=zm-IzMYykcpqG4Mx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </body>
 <script>
